fix state, metrics don't work
