# api/swagger/swagger.yaml
@@ -411,6 +411,18 @@ paths:
               type: string
           schema:
             $ref: '#/definitions/ErrorResponse'
+  /metrics:
+    get:
+      tags:
+        - health
+      summary: "Prometheus metrics"
+      produces:
+      - "text/plain"
+      responses:
+        200:
+          description: ok
+          schema:
+            type: "string"
 definitions:
   UserLoginPassword:
     type: "object"
