# internal/api/restapi/operations/plantbook_api.go
@@ -47,7 +47,11 @@ func NewPlantbookAPI(spec *loads.Document) *PlantbookAPI {
 		UrlformConsumer:       runtime.DiscardConsumer,
 
 		JSONProducer: runtime.JSONProducer(),
+		TxtProducer:  runtime.TextProducer(),
 
+		HealthGetMetricsHandler: health.GetMetricsHandlerFunc(func(params health.GetMetricsParams) middleware.Responder {
+			return middleware.NotImplemented("operation health.GetMetrics has not yet been implemented")
+		}),
 		PlantAddPlantHandler: plant.AddPlantHandlerFunc(func(params plant.AddPlantParams) middleware.Responder {
 			return middleware.NotImplemented("operation plant.AddPlant has not yet been implemented")
 		}),
@@ -134,7 +138,12 @@ type PlantbookAPI struct {
 	// JSONProducer registers a producer for the following mime types:
 	//   - application/json
 	JSONProducer runtime.Producer
+	// TxtProducer registers a producer for the following mime types:
+	//   - text/plain
+	TxtProducer runtime.Producer
 
+	// HealthGetMetricsHandler sets the operation handler for the get metrics operation
+	HealthGetMetricsHandler health.GetMetricsHandler
 	// PlantAddPlantHandler sets the operation handler for the add plant operation
 	PlantAddPlantHandler plant.AddPlantHandler
 	// HealthAPIVersionHandler sets the operation handler for the api version operation
@@ -247,7 +256,13 @@ func (o *PlantbookAPI) Validate() error {
 	if o.JSONProducer == nil {
 		unregistered = append(unregistered, "JSONProducer")
 	}
+	if o.TxtProducer == nil {
+		unregistered = append(unregistered, "TxtProducer")
+	}
 
+	if o.HealthGetMetricsHandler == nil {
+		unregistered = append(unregistered, "health.GetMetricsHandler")
+	}
 	if o.PlantAddPlantHandler == nil {
 		unregistered = append(unregistered, "plant.AddPlantHandler")
 	}
@@ -345,6 +360,8 @@ func (o *PlantbookAPI) ProducersFor(mediaTypes []string) map[string]runtime.Prod
 		switch mt {
 		case "application/json":
 			result["application/json"] = o.JSONProducer
+		case "text/plain":
+			result["text/plain"] = o.TxtProducer
 		}
 
 		if p, ok := o.customProducers[mt]; ok {
@@ -385,6 +402,10 @@ func (o *PlantbookAPI) initHandlerCache() {
 		o.handlers = make(map[string]map[string]http.Handler)
 	}
 
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/metrics"] = health.NewGetMetrics(o.context, o.HealthGetMetricsHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
